# Rasa-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.ce.yml  docker-compose.yml  domain.yml  endpoints.production.yml  endpoints.yml  index.html  pyproject.toml  rasa_x_commands.py  story_graph.dot
actions/: actions.py
data/: nlu.yml  rules.yml  stories.yml
nginx-config-files/: app.nginx.template  rasax.nginx
results/: intent_errors.json  intent_report.json  story_report.json
ubuntu/: docker-compose.ce.yml  install.sh  rasa_x_playbook.yml
