[tool.poetry]
name = "Rasa-Assistant"
version = "0.1.0"
description = ""
authors = ["Jona <jonathan.vargas1104@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.black]
line-length = 88
target-version = [ "py37", "py38",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "2.8.14"}
rasa-x = {url = "https://pypi.rasa.com/api/package/rasa-x/rasa_x-0.42.5-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
